# hidpp

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  result
.github/workflows/: ci.yml  deploy.yml  release.yml  update-cask.yml
bundle/: AppIcon.icns  Info.plist
crates/hidpp/: Cargo.toml
crates/hidpp-cli/: Cargo.toml
crates/hidpp-cli/src/: main.rs
crates/hidpp-daemon/: Cargo.toml
crates/hidpp-daemon/src/: action.rs  bridge.rs  config.rs  daemon.rs  gesture.rs  icon.rs  main.rs  platform.rs  service.rs  tray.rs
crates/hidpp-device/: Cargo.toml
crates/hidpp-device/data/: devices_full.json  profiles.json
crates/hidpp-device/src/: config.rs  device.rs  lib.rs  profile.rs
crates/hidpp-device/tests/: integration.rs
crates/hidpp-transport/: Cargo.toml
crates/hidpp-transport/src/: lib.rs  native.rs
crates/hidpp-web/: Cargo.toml
crates/hidpp-web/src/: lib.rs  webhid.rs
crates/hidpp/src/: error.rs  feature_id.rs  lib.rs  report.rs  types.rs
crates/hidpp/src/features/: adjustable_dpi.rs  change_host.rs  config_change.rs  device_name.rs  feature_set.rs  firmware_info.rs  friendly_name.rs  hires_wheel.rs  hosts_info.rs  mod.rs  root.rs  smart_shift.rs  special_keys.rs  thumbwheel.rs  unified_battery.rs  wireless_status.rs
udev/: 99-hidpp.rules
web/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/devices/: profiles.json
web/src/: device.ts  dom.ts  log.ts  main.ts  state.ts  types.ts
web/src/components/: battery.ts  connect.ts  device-image.ts  device-info.ts  dpi.ts  features.ts  host.ts  smart-shift.ts
web/src/layout/: content.ts  sidebar.ts  toolbar.ts
web/src/sections/: buttons.ts  connect.ts  demo-picker.ts  dpi.ts  host.ts  info.ts  scroll.ts
web/src/styles/: main.css
web/tests/: device.spec.ts  screenshot-demo.spec.ts  screenshot.spec.ts
