[package]
name = "hidpp-cli"
description = "HID++ 2.0 device configuration CLI"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hidpp"
path = "src/main.rs"

[dependencies]
hidpp = { workspace = true }
hidpp-transport = { workspace = true }
hidpp-device = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# Inherit most workspace rules, but CLI is the boundary layer.
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
panic = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"
# CLI boundary: expect/unwrap OK with anyhow error propagation.
unwrap_used = "allow"
expect_used = "allow"
